--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -28,3 +28,21 @@ a {
 a:hover {
     text-decoration: none;
 }
+
+button {
+    width : 100%;
+    height: 30px;
+    background-color: var(--button-color);
+    border-color: var(--button-border-color);
+    transform: scale(1.0);
+}
+
+button:hover {
+    background-color: var(--button-hover-color);
+    transform: scale(1.0);
+}
+
+
+.button-red:active {
+    transform: scale(0.95);
+}
