--- a/src/assets/css/markdown.css
+++ b/src/assets/css/markdown.css
@@ -1,14 +1,40 @@
 .markdown {
   display: flex;
   flex-direction: column;
+  --normal :rgb(146, 148, 152);
+  --think : rgb(237, 163, 85);
+  --say : white;
+  --accent : rgb(177, 222, 232);
 }
 
 .markdown p {
     margin-top: 0px;
     margin-bottom: 16px;
-    color :rgb(146, 148, 152);
+    color : var(--normal);
 }
 
 .markdown h2 {
     margin: 0px;    
+}
+
+
+.markdown code {
+  color :rgb(177, 222, 232);
+  margin-bottom: 16px;
+}
+
+/* ** 생각 */
+.markdown em {
+  color: var(--think);
+  margin-bottom: 16px;
+  margin-left: 4px;
+  margin-right: 4px;
+}
+
+.markdown .say {
+  color: white;
+}
+
+.markdown .accent {
+  color: var(--accent);
 }
