--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -17,7 +17,8 @@
 }
 
 .setting-container {
-    width: 200px;
+    position: relative;
+    width: 250px;
     background-color: rgb(47, 47, 47);
     border: 1px solid rgb(118, 118, 118);
     border-radius: 8px;
