--- a/src/assets/css/slot.css
+++ b/src/assets/css/slot.css
@@ -49,6 +49,10 @@
     font-weight: 600;
 }
 
+.menu-item:hover {
+    background-color: #f1f1f124;
+}
+
 .menu-item span {
     margin-right: 4px;
 }
