--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -14,6 +14,8 @@
 .theme-dark {
     background-color: rgb(23, 23, 23);
 
+    --border-color: rgb(118, 118, 118);
+    
     --text-color: white;
     --title-color: rgb(180, 180, 172);
 
