--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -38,4 +38,5 @@
     --dropdown-light-hover-color : rgb(81, 81, 81);
 
     --input-background-color : rgb(241, 241, 241);
+    --text-field-color : rgb(56, 56, 56);
 }
