FEAT : 프롬프트 preview 추가

--- a/src/assets/css/flexstyle/overloaded.css
+++ b/src/assets/css/flexstyle/overloaded.css
@@ -77,6 +77,10 @@ a:hover {
     text-decoration: underline;
 }
 
+pre {
+    font-family: inherit;
+}
+
 .search {
     --padding: 15px;
     display: flex;
