--- a/src/assets/css/dropdown.css
+++ b/src/assets/css/dropdown.css
@@ -57,6 +57,8 @@
     border-radius: 14px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1000;
+    display: flex;
+    flex-direction: column;
 }
 
 .dropdown-item {
@@ -65,6 +67,9 @@
     border-radius: 14px;
     font-weight: var(--dropdown-font-weight);
     height: 15px;
+    white-space: nowrap;
+    display: flex;
+    flex-grow : 1;
 }
 
 .dropdown-item:hover {
