FEAT : 버전 체크 추가

--- a/src/assets/css/others.css
+++ b/src/assets/css/others.css
@@ -13,3 +13,23 @@
 .shadow {
     box-shadow: 0 0.5px 4px rgba(0, 0, 0, 0.2);
 }
+
+.update-message {
+    color: rgb(0, 123, 0);
+    cursor: pointer;
+    transition: color 0.2s;
+}
+
+.update-message:hover {
+    color: rgb(0, 168, 0);
+}
+
+.footer-version-container {
+    font-size: 15px;
+    padding-left: 10px;
+    height: 100%;
+}
+
+.footer-version {
+    color: rgb(61, 60, 68);
+}
