--- a/src/assets/css/others.css
+++ b/src/assets/css/others.css
@@ -33,3 +33,46 @@
 .footer-version {
     color: rgb(61, 60, 68);
 }
+
+.background-test {
+    background-color: rgba(157, 0, 255, 0.04);
+}
+
+
+.font-button-animation {
+    transition: 0.3s ease font-size;
+    cursor: pointer;
+}
+
+.font-button-animation:hover {
+    font-size: 1.1em;
+}
+
+#home {
+    transition: 0.3s ease background-color;
+}
+
+#home.red {
+    background-color : var(--background-red);
+}
+#home.orange {
+    background-color : var(--background-orange);
+}
+#home.yellow {
+    background-color : var(--background-yellow);
+}
+#home.green {
+    background-color : var(--background-green);
+}
+#home.lime {
+    background-color : var(--background-lime);
+}
+#home.aqua {
+    background-color : var(--background-aqua);
+}
+#home.blue {
+    background-color : var(--background-blue);
+}
+#home.purple {
+    background-color : var(--background-purple);
+}
