FIX : Initializer에서 값을 초기화하지 못하는 문제

--- a/src/assets/css/others.css
+++ b/src/assets/css/others.css
@@ -50,6 +50,7 @@
 
 #home {
     transition: 0.3s ease background-color;
+    background: linear-gradient(var(--background-color), transparent);
 }
 
 #home.red {
