--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,19 +1,7 @@
-body {
+html {
     font-family: 'NanumGothic', sans-serif;
-    width: 100%;
-    height: 100%;
-}
-
-header {
-    color: var(--title-color);
-    font-size: 24px;
-    font-weight: bold;
-    margin: 16px 16px 0px 16px;
-}
-
-footer {
-    margin: 0px 16px 12px 16px;
-    height: 35px;
+    width: 100vw;
+    height: 100vh;
 }
 
 a {
@@ -30,8 +18,6 @@ a:hover {
 }
 
 button {
-    width : 100%;
-    height: 30px;
     background-color: var(--button-color);
     border-color: var(--button-border-color);
     transform: scale(1.0);
