--- a/src/assets/css/dropdown2.css
+++ b/src/assets/css/dropdown2.css
@@ -1,20 +1,9 @@
-:root {
-    --dropdown-font-weight : 450;
-    --dropdown-font-size : 20px;
-    --dropdown-header-border-radius : 18px;
-    --dropdown-item-border-radius : 12px;
-    --dropdown-item-height : 15px;
-}
-.theme-dark {
-    --dropdown-background-color : rgb(47, 47, 47);
-    --dropdown-hover-color : rgb(55, 55, 55);
-    --dropdown-hover-background-color : rgb(66, 66, 66);
-    --dropdown-font-color : white;
-    --dropdown-item-color : #f1f1f124;
-    --dropdown-model-provider-hover-background-color : rgba(66, 66, 66,0.3);
+.model-provider {
+    --dropdown-background-color: rgba(24, 24, 24, 0.8);
+    --dropdown-item-border-radius : 10px;
 }
 
-.dropdown {
+.dropdown2 {
     position: relative;
     display: inline-block;
 
@@ -25,7 +14,7 @@
     cursor: default;
 }
 
-.dropdown-header {
+.dropdown2-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -40,35 +29,39 @@
     padding: 10px 10px;
 }
 
-.dropdown-header:hover {
+.dropdown2-header:hover {
     background-color: var(--dropdown-hover-background-color);
 }
 
-.dropdown-list {
-    list-style-type: disc;
-    margin-block-start: 0.5em;
-    margin-block-end: 0em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 0px;
+.dropdown2-list {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
 
     font-size : var(--dropdown-font-size);
-
-    list-style-type: none;
-    position: absolute;
-    top: 0;
-    left: 0;
     border: 1px solid var(--dropdown-border-color);
     color: var(--dropdown-font-color);
     background-color: var(--dropdown-background-color);
     border-radius: var(--dropdown-item-border-radius);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1000;
-    display: flex;
-    flex-direction: column;
 }
 
-.dropdown-item {
+.dropdown2-sublist {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+
+    font-size : var(--dropdown-font-size);
+    border: 1px solid var(--dropdown-border-color);
+    color: var(--dropdown-font-color);
+    background-color: var(--dropdown-background-color);
+    border-radius: var(--dropdown-item-border-radius);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+}
+
+.dropdown2-item {
     padding: 10px;
     cursor: pointer;
     border-radius: var(--dropdown-item-border-radius);
@@ -77,34 +70,44 @@
     white-space: nowrap;
     display: flex;
     flex-grow : 1;
+    align-items : center;
 }
 
-.dropdown-item:hover {
+.dropdown2-item:hover {
     background-color: var(--dropdown-item-color);
 }
 
-.dropdown.model-provider .dropdown-header {
+.dropdown2.model-provider .dropdown2-header {
     background-color: transparent;
 }
-.dropdown.model-provider .dropdown-header:hover {
+.dropdown2.model-provider .dropdown2-header:hover {
     background-color: var(--dropdown-model-provider-hover-background-color);
     border-radius: 10px;
 }
 
 @media screen and (max-width: 900px) {
-    .responsive.dropdown {
+    .responsive.dropdown2 {
         --dropdown-font-size: 15px;
         --dropdown-header-border-radius : 10px;
         --dropdown-item-border-radius : 10px;
         --dropdown-item-height : 10px;
     }
-    .responsive.dropdown-list {
+    .responsive.dropdown2-list {
         --dropdown-font-size: 15px;
         --dropdown-header-border-radius : 10px;
         --dropdown-item-border-radius : 10px;
         --dropdown-item-height : 10px;
     }
-    .dropdown-header {
+    .responsive .dropdown2-header {
         padding: 5px 8px;
     }
+    .responsive.dropdown2-sublist {
+        --dropdown-font-size: 15px;
+        --dropdown-header-border-radius : 10px;
+        --dropdown-item-border-radius : 10px;
+        --dropdown-item-height : 10px;
+    }
+    .responsive.model-provider {
+        --dropdown-item-border-radius : 6px;
+    }    
 }
