--- a/src/assets/css/modal.css
+++ b/src/assets/css/modal.css
@@ -2,195 +2,216 @@
     position: absolute;
     width : 100%;
     height : 100%;
-    background-color: rgb(0, 0, 0, 0.4);
+    background-color: var(--modal-outside-color);
     z-index: 5;
 }
 
 .modal {
-    background-color: rgb(47, 47, 47);
-    border: 1px solid rgb(118, 118, 118);
+    position: relative;
+    background-color: var(--modal-background-color);
+    border: 1px solid var(--modal-border-color);
+    color : var(--modal-default-color);
     border-radius: 8px;
+    font-size: var(--modal-default-font-size);
+
     padding: 12px;
     z-index: 10;
-    color : white;
     max-height: 80%;
 }
 
-.setting-container {
-    position: relative;
-    width: 250px;
-    background-color: rgb(47, 47, 47);
-    border: 1px solid rgb(118, 118, 118);
-    border-radius: 8px;
-    padding: 12px;
-    z-index: 10;
-    color : white;
-}
-.modal h2 {
-    font-size: 24px;
-    margin: 4px;
+.modal-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0px 12px 8px 4px;
+    margin-bottom: 4px;
 }
 
-.setting-container p {
+.modal-header h2 {
+    font-size: 24px;
+    margin: 0px;
+}
+
+.modal-header .close-button {
+    font-size: 34px;
+}
+
+#setting-modal {
+    min-width: 250px;
+}
+
+#setting-modal button {
+    width : 100%;
+    height: 30px;
+    box-shadow: 0 0.5px 4px rgba(0, 0, 0, 0.2);
+    margin: 4px 0px;
+}
+
+#setting-modal .item {
+    margin: 4px 0px;
+}
+
+#setting-modal p {
     font-size: 14px;
     margin : 0px;
     padding: 0px;
 }
 
-.setting-container .section {
-    margin: 4px 0px 4px 0px;
-}
-
-.setting-container input.full {
+#setting-modal input.full {
     width : auto;
 }
 
-.setting-container input.small {
+#setting-modal input.small {
     width : 35px;
 }
+#setting-modal .upload-container {
+    border: 3px dotted white;
+    padding: 4px;
 
-.modal-close-button {
-    font-size: 32px;
+    transition: 0.2s color ease, 0.2s border ease;
+}
+#setting-modal .upload-container.ondraghover {
+    border: 3px dotted rgb(176, 116, 255);
+    color : rgb(176, 116, 255);
+}
+#setting-modal .span {
+    pointer-events: none;
 }
 
-.history-modal {
+#history-modal {
+    display: flex;
+    flex-direction: column;
     width: 80%;
-    height: 70%;
+    max-height: 80%;
 }
-
-
-.history {
+#history-modal .history-container {
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+}
+#history-modal .history {
+    display: flex;
+    flex-direction: column;
     margin: 2px;
     padding: 6px;
-    transition: background-color 0.2s;
+    transition: 0.2s background-color;
     cursor: pointer;
 }
-
-.history:hover {
+#history-modal .history:hover {
     border-radius: 12px;
     background-color: rgb(41, 41, 41);
 }
-
-.history p {
+#history-modal .history p {
     margin: 4px 0px 4px 0px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
 }
-
-.info {
+#history-modal .history p.history-input {
+    color: var(--history-input-color);
+}
+#history-modal .history p.history-output {
+    color: var(--history-output-color);
+}
+#history-modal .info {
+    display: flex;
+    flex: none;
     height: 40px;
     color : rgb(155, 155, 155);
 }
 
-.config-modal {
+
+#requestinfo-modal {
+    display: flex;
+    flex-direction: column;
     width: 80%;
-    height: 70%;
+    max-height: 70%;
 }
+#requestinfo-modal .contents {
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+}
+#requestinfo-modal .preview-button {
+    font-size: 1.5em;
+    width: 1.5em;
+}
+#requestinfo-modal .subtitle {
+    display: flex;
+    flex: none;
 
+    margin: 24px 0px 12px 4px;    
+    font-size: 1.2em;
 
-.modal .textplace {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: bold;
+}
+#requestinfo-modal .textbox {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: none;
+    
+    min-height: 25px;
     margin: 0px;
     padding: 8px;
     border-radius: 6px;
-    background-color: var(--text-field-color);
-    color: var(--text-color);
-    border: 1px solid rgb(118, 118, 118);
-    overflow-y: auto;
-    min-height: 25px;
+
+    border: 1px solid var(--textbox-border-color);
+    background-color: var(--textbox-background-color);
+    color: var(--textbox-color);
     resize: none;
     overflow: none;
 }
-
-.modal .textplace.preview {
-    background-color: var(--text-field-preview-color);
-}
-
-.textplace hr {
-    border: 0.5px solid var(--text-field-hr-color);
-}
-
-p.config-name {
-    margin: 4px 0px 12px 4px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    font-size: 1.2em;
-    font-weight: bold;
-    margin-top: 24px;
-}
-
-.modal .textplace pre {
-    font-size: 1em;
+#requestinfo-modal .textbox pre {
     margin: 0px;
     white-space: pre-wrap;
     word-wrap: break-word;
     resize: none;
     min-height: 1em;
 }
-
-.modal .textplace .role {
-    color : var(--text-field-hr-color);
+#requestinfo-modal .textbox.preview {
+    background-color: var(--text-field-preview-color);
+}
+#requestinfo-modal .textbox.preview hr {
+    border: 0.5px solid var(--hr-color);
+}
+#requestinfo-modal .textbox.preview .role {
+    color : var(--hr-color);
 }
 
-p.history-input {
-    color: white;
-}
-p.history-output {
-    color: rgb(187, 187, 187);
-}
-
-.vareditor-container {
-    width: 60%;
-    background-color: rgb(47, 47, 47);
-    border: 1px solid rgb(118, 118, 118);
+#vareditor-modal {
+    width: 80%;
     border-radius: 8px;
     padding: 12px;
     z-index: 10;
 }
-.vareditor-content {
-    color : white;
+#vareditor-modal .contents {
+    display: flex;
+    flex-direction: column;
+    margin: 24px 0px 12px 0px;
     overflow-y: auto;
     flex-wrap: 0;
 }
-
-.vareditor {
+#vareditor-modal .vareditor {
     margin: 0px 4px 8px 4px;
+    align-items: center;
 }
-
-.vareditor input[type=text] {
+#vareditor-modal .vareditor input[type=text] {
     border-radius: 6px;
     background-color: var(--input-background-color);
 }
-
-.vareditor textarea {
+#vareditor-modal .vareditor textarea {
     resize: none;
     padding: 6px;
     background-color: var(--input-background-color);
 }
-
-.vareditor .dropdown-header {
+#vareditor-modal .vareditor .dropdown-header {
     background-color: var(--dropdown-light-color);
     border-radius: 14px;
 }
-
-.vareditor .dropdown-header:hover {
+#vareditor-modal .vareditor .dropdown-header:hover {
     background-color: var(--dropdown-light-hover-color);
-}
-
-.vareditor .dropdown-list {
-
-}
-
-
-.upload-container {
-    border: 3px dotted white;
-    padding: 4px;
-
-    transition: 0.2s color ease, 0.2s border ease;
-}
-
-.upload-container.inputform-on-mouse {
-    border: 3px dotted rgb(176, 116, 255);
-    color : rgb(176, 116, 255);
 }
