--- a/src/assets/css/slot.css
+++ b/src/assets/css/slot.css
@@ -1,7 +1,3 @@
-.prompt-slots-container {
-    padding-right : 16px;
-}
-
 .prompt-slot {
     position: relative;
     margin-left: 4px;
@@ -106,6 +102,14 @@
     margin: 1px 0px;
 }
 
+.slot-bottom {
+    justify-content: flex-end;
+    width: 100%;
+    min-height: 12px;
+    margin: 5px;
+    padding-right: 8px;
+}
+
 .slot-colorbox {
     border-radius: 4px;
     border: 1px solid rgb(130, 130, 130);
@@ -165,4 +169,8 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.session-slot-button {
+    font-size: 20px;
 }
