--- a/src/assets/css/footer.scss
+++ b/src/assets/css/footer.scss
@@ -31,6 +31,7 @@
     .footer-version-container {
         font-size: var(--footer-text-size);
         height: 100%;
+        margin-left: 4px;
     }
     .footer-version {
         color: var(--version-text-color);
