--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -17,7 +17,7 @@ a {
 }
 
 button {
-    background-color: var(--button-color);
+    background-color: var(--button-bgcolor);
     border-color: var(--button-border-color);
     transform: scale(1.0);
     &:hover {
