--- a/src/assets/css/modals.scss
+++ b/src/assets/css/modals.scss
@@ -58,8 +58,12 @@
         margin: 4px 0px;
     }
     .item {
-        margin: 4px 0px;
+        margin: 3px 0px;
         min-height: 30px;
+
+        input {
+            height: 16px;
+        }
     }
     .upload-container {
         border: 3px dotted white;
