--- a/front/src/components/Modal/style.scss
+++ b/front/src/components/Modal/style.scss
@@ -2,8 +2,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
@@ -27,6 +27,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     width: 100%;
     max-width: 600px;
+    display: block;
 
     transition : transform 0.3s ease, opacity 0.3s ease;
     transform: scale(1);
