--- a/front/src/pages/SettingModal/options/styles.scss
+++ b/front/src/pages/SettingModal/options/styles.scss
@@ -1,3 +1,10 @@
+:root {
+    --shortcut-input-color: rgb(60, 65, 71);
+    --shortcut-input-focus-color: rgb(45, 50, 56);
+    --inset-shadow-color: rgba(0, 0, 0, 0.1);
+    --inset-shadow-focus-color: rgba(0, 0, 0, 0.5);
+}
+
 .model-header {
     box-sizing: border-box;
     padding: 0px 0.8em;
@@ -83,6 +90,32 @@
 
         &.starred {
             color: rgb(235, 188, 34);
+        }
+    }
+}
+
+.shortcut-modal {
+    .shortcut-description {
+        box-sizing: border-box;
+        padding: 0px 8px;
+        font-size : 0.75em;
+        color: grey;
+    }
+
+    .shortcut-input {
+        box-sizing: border-box;
+        border-radius: 5px;
+        padding: 8px;
+        margin: 0px 4px;
+        box-shadow: inset 0 0 5px var(--inset-shadow-color);
+        background-color: var(--shortcut-input-color);
+
+        transition: background-color 0.15s ease,
+                    box-shadow 0.15s ease;
+
+        &:focus {
+            box-shadow: inset 0 0 5px var(--inset-shadow-focus-color);
+            background-color: var(--shortcut-input-focus-color);
         }
     }
 }
