--- a/front/src/assets/style/base.scss
+++ b/front/src/assets/style/base.scss
@@ -8,6 +8,18 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 18px;
+}
+
+h1 {
+    font-size: 27px;
+}
+
+h2 {
+    font-size: 20px;
+}
+
 a {
     color: inherit;
     text-decoration: none;
